# wali

./: .gitignore  README.md  meson.build  meson.options  start.sh  wali.css  wali2.css  wt_config.xml
.zed/: debug.json  settings.json  tasks.json
include/wali/: AccountsWidget.hpp  Commands.hpp  Common.hpp  DiskUtils.hpp  Install.hpp  IntroductionWidget.hpp  LogFormat.hpp  MessagesWidget.hpp  NetworkWidget.hpp  PartitionWidget.hpp
include/wali/widgets/: AccountsWidget.hpp  Common.hpp  DesktopWidget.hpp  InstallWidget.hpp  IntroductionWidget.hpp  LocaliselWidget.hpp  MessagesWidget.hpp  MountsWidget.hpp  NetworkWidget.hpp  PackagesWidget.hpp  PartitionWidget.hpp  PartitionsWidget.hpp  ValidateWidgets.hpp  VideoWidget.hpp  WaliWidget.hpp  WidgetData.hpp  Widgets.hpp
profiles/: README.md  hyprland.json  niri.json  plasma.json  xfce.json
scripts/: install.sh  install_dev.sh  release_tar.sh  start.sh  start_dev.sh
src/: DiskUtils.cpp  Install.cpp  Wali.cpp  awi.cpp  wali.cpp
src/widgets/: AccountsWidget.cpp  DesktopWidget.cpp  InstallWidget.cpp  LocaliseWidget.cpp  MountsWidget.cpp  NetworkWidget.cpp  PackagesWidget.cpp  PartitionsWidget.cpp  VideoWidget.cpp
subprojects/: sergiusthebest-plog.wrap  wt.wrap
subprojects/walilib/: meson.build
subprojects/walilib/include/wali/: common.hpp  disk_utils.hpp
subprojects/walilib/include/walilib/: common.hpp  disk_utils.hpp
subprojects/walilib/src/: disk_utils.cpp
wwwroot/: wali.css  wt_config.xml
