option('skip_validation', type : 'boolean', value:false, description : 'Enable Install button without validation')
option('disable_install', type : 'boolean', value:false, description : 'Prevent install process')
option('fake_data', type : 'boolean', value:false, description : 'Provide install data to save time during testing')
